2020-08-18  Charlie Zender  <zender@uci.edu>

	* Merge Henry's nco_clm_nfo_to_tm_bnds() and write nco_clm_nfo_get()

2020-08-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha13 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha13: Kamala & Krall';git push
	git tag -a 4.9.4-alpha13 -m 'nco_xtr_xcl_chk; ncra per-record wgt fix, no cll_mth for bnds; ncrename rgr github;';git push --tags

	* Change regression test to expect new behavior

	* Add nco_xtr_xcl_chk() to die with hint if extraction rules lead to retaining user-excluded variables

	* ncrename add GitHub issue to expected failures for regression tests #28, #31

2020-08-13  Charlie Zender  <zender@uci.edu>

	* ncclimo update documentation for hfcs, both on Confluence and in nco.texi

	* ncra drop cell_methods from climatology_bounds, time_bounds variables

2020-08-12  Charlie Zender  <zender@uci.edu>

	* ncclimo turn-on bnd2tpdclm in single- and multi-file input hfc modes

	* ncra, nces add cb->bnd2tpdclm to convert time bounds to diurnal climatology bounds

	* ncra, nces cell_methods for diurnal climatology bounds works

	* Clarify rules for exclusion of coordinate-like variables

2020-08-11  Charlie Zender  <zender@uci.edu>

	* ncra reset wgt_sum after each ssc during MRO to fix per-record weighting

	* NCO 4.9.4-alpha12 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha12: Dry Rot';git push
	git tag -a 4.9.4-alpha12 -m 'autoconf gpu token; nco_rgr_wgt() gpu directives;';git push --tags

	* Do not nest SIMD within existing SIMD region

	* Hand-merge Sahil's GPU directives and autoconf token, add SIMD branch

2020-08-10  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha11: Homemade Sushi';git push
	git tag -a 4.9.4-alpha11 -m 'autoconf link to alpha10 not alpha01 error; ncclimo hfc mpi fl_nbr=1; ncra --per_record_weights;';git push --tags

	* autoconf link to alpha10 not alpha01
